# seventh-semester

./: .gitignore  README.md
advanced_operating_system/: README.md
advanced_operating_system/lab1/: README.md
advanced_operating_system/lab1/assets/: c_sockets.webm
advanced_operating_system/lab1/c_socket/: CMakeLists.txt  README.md  client.c  server.c
